# cam

./: CMakeLists.txt  build-rknn.sh  capture-config.json
3rd/rknn/RKinclude/common/: sample_common.h  sample_common_isp.cpp
3rd/rknn/RKinclude/include/: avilib.h  cJSON.h  demo.h  list.h  webrtc_streamer.h
3rd/rknn/RKinclude/include/common/: sample_common.h
3rd/rknn/RKinclude/include/curl/: Makefile
3rd/rknn/RKinclude/include/face-snap-cpp/: faceSnap.h
3rd/rknn/RKinclude/include/imo-face-extractor/: extract.h  extract_ext.h
3rd/rknn/RKinclude/include/imo-facial-landmark/: detect.h
3rd/rknn/RKinclude/include/rkmedia/: rkmedia_common.h
3rd/rknn/RKlib/: libcgicc.so.3.2.10  libcrypto.so.1.1  libdbus-1.so.3.19.4  libdbus-c++-1.so.0.0.0  libdbus-c++-glib-1.so.0.0.0  libdbus-glib-1.so.2.3.3  libdvbv5.so.0.0.0  libeasymedia.so.1.0.1  libevent-2.1.so.6.0.2  libevent_core-2.1.so.6.0.2  libevent_extra-2.1.so.6.0.2  libevent_openssl-2.1.so.6.0.2  libevent_pthreads-2.1.so.6.0.2  libexiv2.so.26.0.0  libexpat.so.1.6.7  libfcgi++.so.0.0.0  libform.so.6.0  libfreetype.so.6.17.1  libhistory.so.7.0  libimo_face_extract_v3_1_rknn.so.1.0.0  libimo_face_snap_rknn.so.1.0.6  libimo_facial_landmark_rknn.so.1.0.0  libip4tc.so.0.1.0  libip6tc.so.0.1.0  libiptc.so.0.0.0  libjson-c.so.3.0.1  libmenu.so.6.0  libncurses.so.6.0  libnl-genl-3.so.200.26.0  libnl-idiag-3.so.200.26.0  libnl-nf-3.so.200.26.0  libnl-route-3.so.200.26.0  libnl-xfrm-3.so.200.26.0  libpaho-mqtt3a.so.1  libpaho-mqtt3c.so.1  libpanel.so.6.0  libpcrecpp.so.0.0.1  libpcreposix.so.0.0.5  libreadline.so.7.0  librga.so.2.1.0  (+8 more)
3rd/rknn/arctern/include/: define.h  faceDetectTiny.h  faceGluon.h  faceImageColor.h  faceLivenessIr.h  faceMask.h  faceNoiseMotionblur.h  faceQuality.h  facialLandmark.h  memoryDB.h  rkfaceTracker.h  version.h
3rd/rknn/arctern/include/include/: algorithminterface.h  arctern.h  atlasInit.h  initparameter.h  result.h  runparameter.h
3rd/spdlog/details/: async_logger_impl.h
cmake/: oatpp.cmake  opencv.cmake  rknn.cmake  tool.cmake
include/: capture_common.h
src/: capturer.cpp  capturer.h  main.cpp  uploader.cpp  uploader.h
src/arctern/: detector.h  tracker.h
src/arctern/comm/: commDetector.cpp  commDetector.h  commTracker.cpp  commTracker.h
src/arctern/face/: faceDetector.cpp  faceDetector.h  faceTracker.cpp  faceTracker.h
src/arctern/kalman/: BYTETracker.cpp  STrack.cpp  STrack.h  kalmanTracker.cpp  kalmanTracker.h
src/auth/: auth.cpp  auth.h  base64.h  crypt.cpp  crypt.h  lisence.cpp  lisence.h  token.h
src/base/: atomque.h  autoTime.cpp  autoTime.h  capture_utils.cpp  capture_utils.h
src/net/: AuthProvider.cpp  AuthProvider.hpp  PicProvider.cpp  PicProvider.hpp
src/net/client/: AuthClient.h  CaptureClient.h
src/net/config/: AppComponent.h
src/net/dto/: AuthDTOs.hpp  DTOs.hpp
src/rtsp/: frame.cpp  frame.h
src/rtsp/rknn/: rknnFrame.cpp  rknnFrame.h
test/: CMakeLists.txt
test/arctern/: main.cpp
test/auth/: main.cpp
test/net/: main.cpp
test/rtsp/: main.cpp
